--- a/code/frontend/src/app/app.html
+++ b/code/frontend/src/app/app.html
@@ -17,3 +17,4 @@
 <main class="main-content" [class.full-width]="!showSidebar()">
   <router-outlet></router-outlet>
 </main>
+<app-notification></app-notification>
