--- a/code/frontend/src/app/pages/user-management/user-management.html
+++ b/code/frontend/src/app/pages/user-management/user-management.html
@@ -213,6 +213,7 @@
               name="cpf"
               class="form-control"
               placeholder="000.000.000-00"
+              mask="000.000.000-00"
               required
             />
           </div>
@@ -225,6 +226,7 @@
               name="telefone"
               class="form-control"
               placeholder="(00) 00000-0000"
+              mask="(00) 00000-0000"
               required
             />
           </div>
