--- a/code/frontend/src/app/pages/member-management/member-management.html
+++ b/code/frontend/src/app/pages/member-management/member-management.html
@@ -141,7 +141,7 @@
               [(ngModel)]="currentMember.cpf"
               name="cpf"
               class="form-control"
-              maxlength="14"
+              mask="000.000.000-00"
               placeholder="000.000.000-00"
             />
           </div>
@@ -153,22 +153,25 @@
               [(ngModel)]="currentMember.rg"
               name="rg"
               class="form-control"
-              maxlength="20"
+              mask="00.000.000-0"
               placeholder="00.000.000-0"
             />
           </div>
 
           @if (currentMember.estadoCivil) {
             <div class="form-group">
-              <label>Conjugue CPF</label>
+              <label>CPF do Cônjuge</label>
               <input
                 type="text"
                 [(ngModel)]="currentMember.conjugueCPF"
                 name="conjugueCPF"
                 class="form-control"
-                maxlength="14"
+                mask="000.000.000-00"
                 placeholder="000.000.000-00"
               />
+              @if (isValidCpf(currentMember.conjugueCPF)) {
+                <app-spouse-preview [cpf]="currentMember.conjugueCPF"></app-spouse-preview>
+              }
             </div>
           }
         </div>
@@ -185,7 +188,8 @@
               [(ngModel)]="currentMember.telefone"
               name="telefone"
               class="form-control"
-              placeholder="(11)0000.0000"
+              mask="(00) 0000-0000"
+              placeholder="(00) 0000-0000"
             />
           </div>
 
@@ -196,7 +200,8 @@
               [(ngModel)]="currentMember.celular"
               name="celular"
               class="form-control"
-              placeholder="(11)0000.0000"
+              mask="(00) 00000-0000"
+              placeholder="(00) 00000-0000"
             />
           </div>
 
@@ -207,7 +212,8 @@
               [(ngModel)]="currentMember.comercial"
               name="comercial"
               class="form-control"
-              placeholder="(11)0000.0000"
+              mask="(00) 0000-0000"
+              placeholder="(00) 0000-0000"
             />
           </div>
 
@@ -220,16 +226,6 @@
               class="form-control"
               required
               placeholder="email@gmail.com"
-            />
-          </div>
-
-          <div class="form-group">
-            <label>Operadora</label>
-            <input
-              type="text"
-              [(ngModel)]="currentMember.operadora"
-              name="operadora"
-              class="form-control"
             />
           </div>
 
@@ -255,6 +251,9 @@
               [(ngModel)]="currentMember.cep"
               name="cep"
               class="form-control"
+              mask="00000-000"
+              placeholder="00000-000"
+              (blur)="lookupCep(currentMember.cep)"
             />
           </div>
 
@@ -359,6 +358,9 @@
               <option [value]="'Seminarista'">Seminarista</option>
               <option [value]="'Presbítero'">Presbítero</option>
               <option [value]="'Pastor'">Pastor</option>
+              <option [value]="'Pastor Auxiliar'">Pastor Auxiliar</option>
+              <option [value]="'Ex-Membro'">Ex-Membro</option>
+              <option [value]="'Excomungado'">Excomungado</option>
             </select>
           </div>
 
@@ -374,15 +376,18 @@
             </select>
           </div>
 
-          <div class="form-group">
-            <label>LGPD Aceito Quando?</label>
-            <input
-              type="date"
-              [(ngModel)]="currentMember.lgpdAceitoEm"
-              name="lgpdAceitoEm"
-              class="form-control"
-            />
-          </div>
+          @if (currentMember.lgpd === true) {
+            <div class="form-group">
+              <label>LGPD Aceito em *</label>
+              <input
+                type="date"
+                [(ngModel)]="currentMember.lgpdAceitoEm"
+                name="lgpdAceitoEm"
+                class="form-control"
+                required
+              />
+            </div>
+          }
         </div>
       </div>
     </form>
@@ -470,12 +475,6 @@
             <label>Comercial</label>
             <span>{{ viewingMember.comercial || 'Não informado' }}</span>
           </div>
-          @if (viewingMember.operadora) {
-            <div class="detail-item">
-              <label>Operadora</label>
-              <span>{{ viewingMember.operadora }}</span>
-            </div>
-          }
         </div>
       </div>
 
