--- a/code/frontend/src/app/pages/member-management/member-management.html
+++ b/code/frontend/src/app/pages/member-management/member-management.html
@@ -56,6 +56,7 @@
     [striped]="true"
     [hoverable]="true"
     [enablePagination]="true"
+    (sortChange)="onSortChange($event)"
   >
     <ng-template #rowTemplate let-row let-column="column">
       @if (column.key === 'whatsapp') {
